[package]
name = "runqlat-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
runqlat-common = { path = "../runqlat-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "runqlat"
path = "src/main.rs"
